Changes based on comments in the docs document: - new network plugin 'calico' - simpler unschedule/schedule commands - simpler and side-effect-freer keepalived configuration. - setup of load balancer is now separated from the cluster setup
New functionality:
- automatic setup of etcd-operator for applications running in the cluster (not the cluster itself)
- prefetching of images needed for Kubernetes operation and copying them to the cluster hosts
- support of more networking plugins: flannel (now default), weavent, calico

Other changes:
- the Dashboard now has a non-random NodePort port number if no LB was configured: 30990
- include the network plugin images in the playbook for pre-fetching and copying images

--- a/ansible/roles/disable-scheduling/templates/unschedule.sh.j2
+++ b/ansible/roles/disable-scheduling/templates/unschedule.sh.j2
@@ -4,5 +4,5 @@ KUBECONFIG=/etc/kubernetes/admin.conf
 export KUBECONFIG
 
 {% for host in groups['masters'] %}
-kubectl patch node {{ hostvars[host]['ansible_fqdn'] }} -p '{"spec":{"unschedulable":true}}' || exit 1
+kubectl cordon {{ hostvars[host]['ansible_fqdn'] }} || exit 1
 {% endfor %}
