--- a/ansible/roles/enable-scheduling/templates/schedule.sh.j2
+++ b/ansible/roles/enable-scheduling/templates/schedule.sh.j2
@@ -4,5 +4,5 @@ KUBECONFIG=/etc/kubernetes/admin.conf
 export KUBECONFIG
 
 {% for host in groups['masters'] %}
-kubectl patch node {{ hostvars[host]['ansible_fqdn'] }} -p '{"spec":{"unschedulable":false}}' || exit 1
+kubectl uncordon {{ hostvars[host]['ansible_fqdn'] }} || exit 1
 {% endfor %}
