--- a/ansible/roles/etcd/templates/etcd.conf.j2
+++ b/ansible/roles/etcd/templates/etcd.conf.j2
@@ -15,3 +15,15 @@ ETCD_INITIAL_CLUSTER_TOKEN="{{ CLUSTER_NAME }}"
 #ETCD_DEBUG="false"
 # examples for -log-package-levels etcdserver=WARNING,security=DEBUG
 #ETCD_LOG_PACKAGE_LEVELS=""
+
+#[security]
+ETCD_CERT_FILE="/etc/etcd/pki/server.pem"
+ETCD_KEY_FILE="/etc/etcd/pki/server-key.pem"
+ETCD_CLIENT_CERT_AUTH="true"
+ETCD_TRUSTED_CA_FILE="/etc/etcd/pki/ca.pem"
+#ETCD_AUTO_TLS="false"
+ETCD_PEER_CERT_FILE="/etc/etcd/pki/peer.pem"
+ETCD_PEER_KEY_FILE="/etc/etcd/pki/peer-key.pem"
+ETCD_PEER_CLIENT_CERT_AUTH="true"
+ETCD_PEER_TRUSTED_CA_FILE="/etc/etcd/pki/ca.pem"
+#ETCD_PEER_AUTO_TLS="false"
