--- a/ansible/roles/primary-master/templates/kubeadm-init.yaml.j2
+++ b/ansible/roles/primary-master/templates/kubeadm-init.yaml.j2
@@ -16,7 +16,7 @@ etcd:
 {% for host in groups['masters'] %}
   - http://{{ hostvars[host]['ansible_default_ipv4']['address'] }}:2379
 {% endfor %}
-  caFile: /etc/etcd/pki/ca.pem
-  certFile: /etc/etcd/pki/client.pem
-  keyFile: /etc/etcd/pki/client-key.pem
+  caFile: /etc/kubernetes/pki/etcd/ca.pem
+  certFile: /etc/kubernetes/pki/etcd/client.pem
+  keyFile: /etc/kubernetes/pki/etcd/client-key.pem
 
