New functionality: - support for upgrading a cluster (see README.md for details)
Fixes:
- though certificates were generated, etcd was still used via http

--- a/ansible/roles/etcd/templates/etcd.conf.j2
+++ b/ansible/roles/etcd/templates/etcd.conf.j2
@@ -1,13 +1,13 @@
 # [member]
 ETCD_NAME={{ inventory_hostname }}
 ETCD_DATA_DIR="/var/lib/etcd/default.etcd"
-ETCD_LISTEN_PEER_URLS="http://{{ ansible_default_ipv4.address }}:2380,http://127.0.0.1:2380"
-ETCD_LISTEN_CLIENT_URLS="http://{{ ansible_default_ipv4.address }}:2379,http://127.0.0.1:2379"
+ETCD_LISTEN_PEER_URLS="https://{{ ansible_default_ipv4.address }}:2380,http://127.0.0.1:2380"
+ETCD_LISTEN_CLIENT_URLS="https://{{ ansible_default_ipv4.address }}:2379,http://127.0.0.1:2379"
 
 #[cluster]
-ETCD_INITIAL_ADVERTISE_PEER_URLS="http://{{ ansible_default_ipv4.address }}:2380"
-ETCD_ADVERTISE_CLIENT_URLS="http://{{ ansible_default_ipv4.address }}:2379"
-ETCD_INITIAL_CLUSTER="{% for host in groups['masters'] %}{{ hostvars[host]['inventory_hostname'] }}=http://{{ hostvars[host]['ansible_default_ipv4']['address'] }}:2380{% if not loop.last %},{% endif %}{% endfor %}"
+ETCD_INITIAL_ADVERTISE_PEER_URLS="https://{{ ansible_default_ipv4.address }}:2380"
+ETCD_ADVERTISE_CLIENT_URLS="https://{{ ansible_default_ipv4.address }}:2379"
+ETCD_INITIAL_CLUSTER="{% for host in groups['masters'] %}{{ hostvars[host]['inventory_hostname'] }}=https://{{ hostvars[host]['ansible_default_ipv4']['address'] }}:2380{% if not loop.last %},{% endif %}{% endfor %}"
 ETCD_INITIAL_CLUSTER_STATE="new"
 ETCD_INITIAL_CLUSTER_TOKEN="{{ CLUSTER_NAME }}"
 
