--- a/ansible/roles/secondary-masters/templates/adapt-etc-kubernetes.sh.j2
+++ b/ansible/roles/secondary-masters/templates/adapt-etc-kubernetes.sh.j2
@@ -1,7 +1,5 @@
 #!/bin/sh
 
-cd /etc/kubernetes
-
 {% for host in groups['primary-master'] %}
 PRIMARY_MASTER_FQDN="`echo "{{ hostvars[host]['ansible_fqdn'] }}" | sed 's/\./\\./g'`"
 {% endfor %}
@@ -10,4 +8,7 @@ PRIMARY_MASTER_FQDN="`echo "{{ hostvars[host]['ansible_fqdn'] }}" | sed 's/\./\\
 PRIMARY_MASTER_IP="`echo "{{ hostvars[host]['ansible_default_ipv4']['address'] }}" | sed 's/\./\\./g'`"
 {% endfor %}
 
-perl -pi -e "s/${PRIMARY_MASTER_FQDN}/{{ ansible_fqdn }}/g; s/(server: *https:\/\/|--advertise-address=)${PRIMARY_MASTER_IP}/\${1}{{ ansible_default_ipv4.address }}/g"  *.* manifests/*.*
+cd /etc/kubernetes
+perl -pi -e "s/${PRIMARY_MASTER_FQDN}/{{ ansible_fqdn }}/g; s/${PRIMARY_MASTER_IP}/{{ ansible_default_ipv4.address }}/g" *.* 
+cd /etc/kubernetes/manifests
+perl -pi -e "s/--advertise-address=${PRIMARY_MASTER_IP}/--advertise-address={{ ansible_default_ipv4.address }}/g; s/${PRIMARY_MASTER_IP} *$/{{ ansible_default_ipv4.address }}/g" *.*
