New functionality: - changed implementation of setup and upgrade to running kubeadm on every master instead of copying and patching configuration from the primary to the secondary masters Fixes: - speedup of cluster setup by running the package manager on masters and minions at the same time - re-added accidentally removed patching of configmap/kube-proxy to use the virtual IP

--- a/ansible/templates/wait-for-minions.sh.j2
+++ b/ansible/templates/wait-for-minions.sh.j2
@@ -11,13 +11,13 @@ while [ "$READY" != "true" ]; do
 	READY=true
 
 	if [ $N -gt ${MAX_WAIT_SECONDS} ]; then
-		echo "Masters have not come up within ${MAX_WAIT_SECONDS} seconds." 1>&2
+		echo "Minions have not come up within ${MAX_WAIT_SECONDS} seconds." 1>&2
 		exit 1
 	else
 		N=`expr $N + ${INCREMENT_SECONDS}`
 	fi
 
-{% for host in groups['masters'] %}	if kubectl get nodes | egrep -q "^{{ hostvars[host]['ansible_fqdn'] }}[ \t]*Ready"; then
+{% for host in groups['minions'] %}	if kubectl get nodes | egrep -q "^{{ hostvars[host]['ansible_fqdn'] }}[ \t]*Ready"; then
 		echo "Node {{ hostvars[host]['ansible_fqdn'] }} is ready."
 	else
 		echo "Node {{ hostvars[host]['ansible_fqdn'] }} is not yet ready."
