--- a/ansible/roles/join-token/templates/join-worker-node.sh.j2
+++ b/ansible/roles/join-token/templates/join-worker-node.sh.j2
@@ -2,4 +2,4 @@
 
 rm -f /etc/kubernetes/kubelet.conf /etc/kubernetes/pki/ca.crt
 
-kubeadm join --token {{ TOKEN.stdout }} {{ ansible_default_ipv4.address }}:6443 --discovery-token-ca-cert-hash sha256:{{ HASH.stdout }}
+kubeadm join --token {{ TOKEN.stdout }} {{ MASTER_VIP }}:6443 --discovery-token-ca-cert-hash sha256:{{ HASH.stdout }}
