Repaired ever-unreliable fetching and exporting of images in 'cluster-images' playbook by using a shell script instead of ansible commands (gasp).

--- a/ansible/roles/primary-master/templates/get-flannel-image-specs.sh.j2
+++ b/ansible/roles/primary-master/templates/get-flannel-image-specs.sh.j2
@@ -5,8 +5,8 @@ errorExit() {
 	exit 1
 }
 
-wget -O /tmp/flannel.yaml '{{ FLANNEL_YAML_URL }}'
+wget -q -O /tmp/flannel.yaml '{{ FLANNEL_YAML_URL }}'
 
-egrep '^[ \t]*image:' /tmp/flannel.yaml  | sed 's/.*image: *//'
+egrep '^[ \t]*image:' /tmp/flannel.yaml  | sed 's/.*image: *//' | sort -u
 
 rm -f /tmp/flannel.yaml
