--- a/ansible/roles/primary-master/templates/get-calico-image-specs.sh.j2
+++ b/ansible/roles/primary-master/templates/get-calico-image-specs.sh.j2
@@ -5,8 +5,8 @@ errorExit() {
 	exit 1
 }
 
-wget -O /tmp/calico.yaml '{{ CALICO_YAML_URL }}' || errorExit "Error downloading from '{{ CALICO_YAML_URL }}'."
+wget -q -O /tmp/calico.yaml '{{ CALICO_YAML_URL }}' || errorExit "Error downloading from '{{ CALICO_YAML_URL }}'."
 
-egrep '^[ \t]*image:' /tmp/calico.yaml  | sed 's/.*image: *//'
+egrep '^[ \t]*image:' /tmp/calico.yaml  | sed 's/.*image: *//' | sort -u
 
 rm -f /tmp/calico.yaml
