Several fixes to ansible setup: - So far the node names were the respective hosts' FQDNs which is incorrect, since the default host name should always be short, i.e.  without the domain name in it. - Use the VIP as advertiseAddress. - Patch the configuration of kubelet, scheduler and controller manager to use the VIP address.

--- a/ansible/roles/enable-scheduling/templates/schedule.sh.j2
+++ b/ansible/roles/enable-scheduling/templates/schedule.sh.j2
@@ -4,5 +4,5 @@ KUBECONFIG=/etc/kubernetes/admin.conf
 export KUBECONFIG
 
 {% for host in groups['masters'] %}
-kubectl uncordon {{ hostvars[host]['ansible_fqdn'] }} || exit 1
+kubectl uncordon {{ hostvars[host]['ansible_hostname'] }} || exit 1
 {% endfor %}
