--- a/ansible/roles/disable-scheduling/templates/unschedule.sh.j2
+++ b/ansible/roles/disable-scheduling/templates/unschedule.sh.j2
@@ -5,7 +5,7 @@ export KUBECONFIG
 
 {% for host in groups['masters'] %}
 N=0
-while ! kubectl cordon {{ hostvars[host]['ansible_fqdn'] }}; do
+while ! kubectl cordon {{ hostvars[host]['ansible_hostname'] }}; do
 	if [ $N -gt 4 ]; then
 		echo "kubectl cordon did not succeed in time." 1>&2
 		exit 1
