Optimisation to setting up the HA settings in the masters: use the new 'controlPlaneEndpoint' setting in the kubeadm init file.

--- a/ansible/templates/kubeadm-init.yaml.j2
+++ b/ansible/templates/kubeadm-init.yaml.j2
@@ -5,6 +5,7 @@ networking:
   podSubnet: {{ POD_NETWORK_CIDR }}
 api:
   advertiseAddress: {{ MASTER_VIP }}
+  controlPlaneEndpoint: {{ MASTER_VIP }}
 apiServerCertSANs:
 - 127.0.0.1
 - {{ MASTER_VIP }}
