--- a/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/ansible/roles/nginx/templates/nginx.conf.j2
@@ -4,8 +4,6 @@ worker_processes auto;
 error_log  /var/log/nginx/error.log info;
 pid        /var/run/nginx.pid;
 
-load_module /usr/lib64/nginx/modules/ngx_stream_module.so;
-
 events {
     worker_connections  1024;
 }
@@ -13,6 +11,7 @@ events {
 stream {
 
     upstream apiserver {
+        hash $remote_addr;
 {% for host in groups['masters'] %}
         server {{ hostvars[host]['ansible_default_ipv4']['address'] }}:6443 weight=5 max_fails=3 fail_timeout=30s;
 {% endfor %}
