kubead-init.yaml: add private IP to apiServerCertSANs as proposed by detiber in https://github.com/kubernetes/website/pull/8541#issuecomment-395536817

--- a/ansible/templates/kubeadm-init.yaml.j2
+++ b/ansible/templates/kubeadm-init.yaml.j2
@@ -3,6 +3,9 @@ kind: MasterConfiguration
 kubernetesVersion: v{{ KUBERNETES_VERSION }}
 networking:
   podSubnet: {{ POD_NETWORK_CIDR }}
+apiServerCertSANs:
+- {{ MASTER_VIP }}
+- {{ ansible_default_ipv4.address }}
 api:
   advertiseAddress: {{ MASTER_VIP }}
   controlPlaneEndpoint: {{ MASTER_VIP }}
