New: Support for automatic setup of prometheus operator, centralised logging to EFK stack with hot/warm setup. Changed: - the etcd cluster is now run in docker controlled by kubelet, it can be colocated with the master nodes or fully external. - brought kubeadm-init.yaml template in sync with what is proposed in the documentation. - for components from github (dashboard, heapster, etcd-operator, prometheus-operator) a git ref can be configured in the variables.

--- a/ansible/templates/kubeadm-init.yaml.j2
+++ b/ansible/templates/kubeadm-init.yaml.j2
@@ -1,30 +1,20 @@
-apiVersion: kubeadm.k8s.io/v1alpha1
+apiVersion: kubeadm.k8s.io/v1alpha2
 kind: MasterConfiguration
 kubernetesVersion: v{{ KUBERNETES_VERSION }}
-networking:
-  podSubnet: {{ POD_NETWORK_CIDR }}
 apiServerCertSANs:
 - {{ MASTER_VIP }}
 - {{ ansible_default_ipv4.address }}
 api:
-  advertiseAddress: {{ MASTER_VIP }}
   controlPlaneEndpoint: {{ MASTER_VIP }}
-apiServerCertSANs:
-- 127.0.0.1
-- {{ MASTER_VIP }}
-{% for host in groups['masters'] %}
-- {{ hostvars[host]['ansible_fqdn'] }}
-{% endfor %}
-{% for host in groups['masters'] %}
-- {{ hostvars[host]['ansible_default_ipv4']['address'] }}
-{% endfor %}
+  advertiseAddress: {{ MASTER_VIP }}
 etcd:
-  endpoints:
+  external:
+    endpoints:
 {% for host in groups['etcd'] %}
-  - https://{{ hostvars[host]['ansible_default_ipv4']['address'] }}:2379
+    - https://{{ hostvars[host]['ansible_default_ipv4']['address'] }}:2379
 {% endfor %}
-  caFile: /etc/kubernetes/pki/etcd/ca.pem
-  certFile: /etc/kubernetes/pki/etcd/client.pem
-  keyFile: /etc/kubernetes/pki/etcd/client-key.pem
-apiServerExtraArgs:
-  endpoint-reconciler-type: "lease"
+    caFile: /etc/kubernetes/pki/etcd/ca.crt
+    certFile: /etc/kubernetes/pki/apiserver-etcd-client.crt
+    keyFile: /etc/kubernetes/pki/apiserver-etcd-client.key
+networking:
+  podSubnet: {{ POD_NETWORK_CIDR }}
