--- a/ansible/roles/external-etcd/templates/kubeadmcfg-v1beta2.yaml.j2
+++ b/ansible/roles/external-etcd/templates/kubeadmcfg-v1beta2.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: "kubeadm.k8s.io/v1alpha3"
+apiVersion: "kubeadm.k8s.io/v1beta2"
 kind: ClusterConfiguration
 kubernetesVersion: v{{ KUBERNETES_VERSION }}
 etcd:
@@ -9,9 +9,9 @@ etcd:
     - "{{ hostvars[etcdnode]['ansible_default_ipv4']['address'] }}"
     extraArgs:
       initial-cluster-state: new
-      name: {{ hostvars[etcdnode]['inventory_hostname'] }}
+      name: {{ hostvars[etcdnode]['ansible_hostname'] }}
       listen-peer-urls: https://{{ hostvars[etcdnode]['ansible_default_ipv4']['address'] }}:2380
       listen-client-urls: https://{{ hostvars[etcdnode]['ansible_default_ipv4']['address'] }}:2379
       advertise-client-urls: https://{{ hostvars[etcdnode]['ansible_default_ipv4']['address'] }}:2379
       initial-advertise-peer-urls: https://{{ hostvars[etcdnode]['ansible_default_ipv4']['address'] }}:2380
-      initial-cluster: {% for host in groups['etcd'] %}{{ hostvars[host]['inventory_hostname'] }}=https://{{ hostvars[host]['ansible_default_ipv4']['address'] }}:2380{% if not loop.last %},{% endif %}{% endfor %}
+      initial-cluster: {% for host in groups['etcd'] %}{{ hostvars[host]['ansible_hostname'] }}=https://{{ hostvars[host]['ansible_default_ipv4']['address'] }}:2380{% if not loop.last %},{% endif %}{% endfor %}
