Fixed issue with scaling coredns, brought loading and saving of images up-to-date.

--- a/ansible/roles/primary-master/templates/get-weavenet-image-specs.sh.j2
+++ b/ansible/roles/primary-master/templates/get-weavenet-image-specs.sh.j2
@@ -7,6 +7,6 @@ errorExit() {
 
 wget -q -O /tmp/weavenet.yaml "{{ WEAVENET_YAML_URL_PREFIX }}{{ KUBECTL_VERSION.stdout }}"
 
-egrep '^[ \t]*image:' /tmp/weavenet.yaml  | sed 's/.*image: *//' | sort -u
+egrep '^[ \t]*image:' /tmp/weavenet.yaml  | sed 's/.*image: *//' | tr -d "'" | tr -d '"' | sort -u
 
 rm -f /tmp/weavenet.yaml
