--- a/ansible/roles/primary-master/templates/get-calico-image-specs.sh.j2
+++ b/ansible/roles/primary-master/templates/get-calico-image-specs.sh.j2
@@ -7,6 +7,6 @@ errorExit() {
 
 wget -q -O /tmp/calico.yaml '{{ CALICO_YAML_URL }}' || errorExit "Error downloading from '{{ CALICO_YAML_URL }}'."
 
-egrep '^[ \t]*image:' /tmp/calico.yaml  | sed 's/.*image: *//' | sort -u
+egrep '^[ \t]*image:' /tmp/calico.yaml  | sed 's/.*image: *//' | tr -d "'" | tr -d '"' | sort -u
 
 rm -f /tmp/calico.yaml
