--- a/ansible/roles/primary-master/templates/get-flannel-image-specs.sh.j2
+++ b/ansible/roles/primary-master/templates/get-flannel-image-specs.sh.j2
@@ -7,6 +7,6 @@ errorExit() {
 
 wget -q -O /tmp/flannel.yaml '{{ FLANNEL_YAML_URL }}'
 
-egrep '^[ \t]*image:' /tmp/flannel.yaml  | sed 's/.*image: *//' | sort -u
+egrep '^[ \t]*image:' /tmp/flannel.yaml  | sed 's/.*image: *//' | tr -d "'" | tr -d '"' | sort -u
 
 rm -f /tmp/flannel.yaml
