If 'nginx' load balancing is configured, both, nginx and keepalived will now run as static pods on the master nodes. Note that with some clusters the nginx/keepalived setup (regardless of this commit) currently joining the first secondary master node always fails while all subsequent masters can be joined just fine. A fix to this is expected with Kubernetes 1.18.0, see also https://github.com/kubernetes/kubernetes/pull/85763

--- a/ansible/roles/nginx/templates/nginx.yaml.j2
+++ b/ansible/roles/nginx/templates/nginx.yaml.j2
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
 spec:
   containers:
-  - image: nginx:{{ NGINX_VERSION }}
+  - image: nginx:{{ NGINX_TAG }}
     name: nginx
     livenessProbe:
       failureThreshold: 8
