--- a/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/ansible/roles/nginx/templates/nginx.conf.j2
@@ -1,5 +1,6 @@
 user  nginx;
 worker_processes auto;
+#load_module /usr/lib64/nginx/modules/ngx_stream_module.so;
 
 error_log  /var/log/nginx/error.log info;
 pid        /var/run/nginx.pid;
