--- a/ansible/roles/external_etcd/templates/kubelet-config.yaml.j2
+++ b/ansible/roles/external_etcd/templates/kubelet-config.yaml.j2
@@ -1,10 +1,12 @@
 apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration
-cgroupDriver: {{OS_DOCKER_CGROUP_DRIVER}}
+cgroupDriver: {{ OS_DOCKER_CGROUP_DRIVER }}
 address: 127.0.0.1
 staticPodPath: /etc/kubernetes/manifests
 containerRuntimeEndpoint: unix:///var/run/containerd/containerd.sock
 authentication:
+  anonymous:
+    enabled: false
   webhook:
     enabled: false
 authorization:
