--- a/ansible/roles/keepalived/templates/check_apiserver.sh.j2
+++ b/ansible/roles/keepalived/templates/check_apiserver.sh.j2
@@ -13,8 +13,4 @@ if [ -x "$OVERRIDE_SCRIPT" ]; then
 	exit $?
 fi
 
-curl --silent --max-time 2 --insecure https://localhost:6443/ -o /dev/null || errorExit "Error GET https://localhost:6443/"
-if ip addr | grep -q {{ APISERVER_VIP }}; then
-    curl --silent --max-time 2 --insecure https://{{ APISERVER_VIP }}:6443/ -o /dev/null || errorExit "Error GET https://{{ APISERVER_VIP }}:6443/"
-fi
-
+curl -sfk --max-time 2 https://localhost:6443/healthz -o /dev/null || errorExit "Error GET https://localhost:6443/healthz"
