--- a/ansible/roles/keepalived/templates/keepalived.conf.j2
+++ b/ansible/roles/keepalived/templates/keepalived.conf.j2
@@ -1,6 +1,7 @@
+! /etc/keepalived/keepalived.conf
 ! Configuration File for keepalived
 global_defs {
-	router_id LVS_DEVEL
+    router_id LVS_DEVEL
 }
 vrrp_script check_apiserver {
   script "/etc/keepalived/check_apiserver.sh"
@@ -17,7 +18,7 @@ vrrp_instance VI_1 {
     state BACKUP
 {% endif %}
     interface {{ ansible_default_ipv4.interface }}
-    virtual_router_id 51
+    virtual_router_id {{ KEEPALIVED_ROUTER_ID }}
 {% if 'primary_master' in group_names %}
     priority 101
 {% else %}
@@ -25,7 +26,7 @@ vrrp_instance VI_1 {
 {% endif %}
     authentication {
         auth_type PASS
-        auth_pass 4be37dc3b4c90194d1600c483e10ad1d
+        auth_pass {{ KEEPALIVED_AUTH_PASS }}
     }
     virtual_ipaddress {
         {{ APISERVER_VIP }}
@@ -33,4 +34,4 @@ vrrp_instance VI_1 {
     track_script {
         check_apiserver
     }
-}
+} 
